--- a/www/index.html
+++ b/www/index.html
@@ -3,27 +3,30 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>TypeScript 2 and you...</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <meta name="HandheldFriendly" content="True">
-    <meta name="MobileOptimized" content="320">
-    <meta http-equiv="cleartype" content="on">
 
-    <style>
-        html,
-        body {
-            margin: 0;
-            padding: 0;
-        }
-    </style>
+    <title>TypeScript 2 and You...</title>
+
+    <meta http-equiv="cleartype" content="on">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1,IE=Edge">
+
+    <meta name="viewport" content="width=device-width initial-scale=1 maximum-scale=1 user- scalable=0 minimal-ui" />
+    <meta name="MobileOptimized" content="320">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="TypeScript 2 and You...">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="HandheldFriendly" content="true" />
+    <meta name="robots" content="noindex,nofollow" />
+    <meta name="full-screen" content="yes" />
+    <meta name="screen-orientation" content="landscape" />
+    <meta name="x5-fullscreen" content="true" />
+    <meta name="360-fullscreen" content="true" />
 </head>
 
 <body>
-
-    <div id="game-container"></div>Hello!
+    <div id="game-container"></div>
     <script src="vendor.bundle.js"></script>
     <script src="bundle.js"></script>
-
 </body>
 
 </html>
